2008-05-08  Werner Koch  <wk@g10code.com>

	* src/inst-gpa.nsi: Mape tips installation optional.

	* src/Makefile.am (gpg4win_pkg_gnupg2_configure): Add --with-adns.

2008-05-08  Marcus Brinkmann  <marcus@ulysses.g10code.com>

	* Makefile.am (EXTRA_DIST): Add
	patches/claws-mail-3.4.0/04-gnutls.patch.

	* packages/packages.current: Update kleopatra checksum.

2008-05-07  Marcus Brinkmann  <marcus@ulysses.g10code.com>

	* packages/packages.current: Update kleopatra and kdelibs.
	* src/inst-kleopatra.nsi: Add kwatchgnupg.
	* src/uninst-kleopatra.nsi: Remove kwatchgnupg.

2008-05-07  Werner Koch  <wk@g10code.com>

	* patches/gpgol/01-last-minute.patch: New.

2008-05-06  Werner Koch  <wk@g10code.com>

	* patches/gpgol/01-always-decrypt.patch: Remove.
	* packages/packages.current: Update gpgme and gpgol.

2008-04-30  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Add adns.
	* configure.ac: Add support for adns.
	* src/uninst-libadns.nsi, src/inst-libadns.nsi: New.
	* include/config.nsi.in, src/Makefile.am, src/inst-sections.nsi:
	Add adns.

2008-04-28  Marcus Brinkmann  <marcus@ulysses.g10code.com>

	* packages/packages.current: Update kdelibs and kleopatra.
	* src/inst-kleopatra.nsi, src/uninst-kleopatra.nsi: Update.

2008-04-25  Marcus Brinkmann  <marcus@ulysses.g10code.com>

	* packages/packages.current: Add libgsasl, libtasn1, opencdk,
	gnutls.
	* configure.ac: Add support for libgsasl, libtasn1, opencdk and
	gnutls source packages.
	* include/config.nsi.in: Likewise.
	* inst-libgsasl.nsi, uninst-libgsasl.nsi, inst-libtasn1.nsi,
	uninst-libtasn1.nsi, inst-opencdk.nsi, uninst-opencdk.nsi,
	inst-gnutls.nsi, uninst-gnutls.nsi: New files.
	* src/Makefile.am (EXTRA_DIST): Add these files.
	(gpg4win_spkgs): Add libgsasl, libtasn1, opencdk, gnutls.
	(gpg4win_pkg_gnutls_configure): New variable.
	(gpg4win_pkg_claws_configure): Enable pthread and gnutls.
	* patches/claws-mail-3.4.0/04-gnutls.patch: New file.
